--- a/index.html
+++ b/index.html
@@ -1,121 +1,147 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>改編圈圈叉叉遊戲</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
-        #board {
-            display: grid;
-            grid-template-columns: repeat(3, 100px);
-            grid-gap: 5px;
-            margin: 20px;
-        }
-        .cell {
-            width: 100px;
-            height: 100px;
-            background: #f9f9f9;
-            border: 2px solid #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 40px;
-            cursor: pointer;
-        }
-        .cell:hover {
-            background: #e0e0e0;
-        }
-        .cell.x { color: #e74c3c; }
-        .cell.o { color: #3498db; }
-        #status {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-        #reset {
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            background: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-        }
-        #reset:hover {
-            background: #45a049;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>圈圈叉叉</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      font-family: Arial, sans-serif;
+    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .game {
+      display: grid;
+      grid-template-columns: repeat(3, 100px);
+      gap: 5px;
+      margin-bottom: 20px;
+    }
+    .box {
+      width: 100px;
+      height: 100px;
+      border: none;
+      border-radius: 10px;
+      background: rgba(255, 255, 255, 0.8);
+      font-size: 40px;
+      color: #333;
+      cursor: pointer;
+      transition: transform 0.2s, background 0.3s;
+    }
+    .box:hover {
+      background: rgba(255, 255, 255, 1);
+      transform: scale(1.05);
+    }
+    #reset {
+      padding: 10px 20px;
+      font-size: 18px;
+      background: #191913;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    #reset:hover {
+      background: #333;
+    }
+    #status {
+      margin-bottom: 20px;
+      font-size: 24px;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-    <div id="status">輪到: X</div>
-    <button id="reset">重新開始</button>
-    <div id="board">
-        <div class="cell" data-index="0"></div>
-        <div class="cell" data-index="1"></div>
-        <div class="cell" data-index="2"></div>
-        <div class="cell" data-index="3"></div>
-        <div class="cell" data-index="4"></div>
-        <div class="cell" data-index="5"></div>
-        <div class="cell" data-index="6"></div>
-        <div class="cell" data-index="7"></div>
-        <div class="cell" data-index="8"></div>
+  <div class="container">
+    <p id="status">輪到 X</p>
+    <div class="game">
+      <button class="box" data-index="0"></button>
+      <button class="box" data-index="1"></button>
+      <button class="box" data-index="2"></button>
+      <button class="box" data-index="3"></button>
+      <button class="box" data-index="4"></button>
+      <button class="box" data-index="5"></button>
+      <button class="box" data-index="6"></button>
+      <button class="box" data-index="7"></button>
+      <button class="box" data-index="8"></button>
     </div>
+    <button id="reset">重新開始</button>
+  </div>
 
-    <script>
-        const board = document.getElementById('board');
-        const cells = document.querySelectorAll('.cell');
-        const status = document.getElementById('status');
-        const resetButton = document.getElementById('reset');
-        let currentPlayer = 'X';
-        let moveHistory = [];
-        let xCount = 0;
-        let oCount = 0;
+  <script>
+    const boxes = document.querySelectorAll('.box');
+    const resetButton = document.getElementById('reset');
+    const status = document.getElementById('status');
+    let board = Array(9).fill(null);
+    let currentPlayer = 'X';
+    let moveHistory = { X: [], O: [] };
 
-        cells.forEach(cell => {
-            cell.addEventListener('click', () => {
-                const index = cell.dataset.index;
-                if (cell.textContent) return;
+    boxes.forEach(box => {
+      box.addEventListener('click', () => {
+        const index = parseInt(box.getAttribute('data-index'));
+        if (board[index] || checkWinner()) return;
 
-                cell.textContent = currentPlayer;
-                cell.classList.add(currentPlayer.toLowerCase());
-                moveHistory.push({ index: index, symbol: currentPlayer });
+        board[index] = currentPlayer;
+        box.textContent = currentPlayer;
 
-                if (currentPlayer === 'X') {
-                    xCount++;
-                } else {
-                    oCount++;
-                }
+        moveHistory[currentPlayer].push(index);
+        if (moveHistory[currentPlayer].length > 3) {
+          const oldIndex = moveHistory[currentPlayer].shift();
+          board[oldIndex] = null;
+          boxes[oldIndex].textContent = '';
+        }
 
-                if (xCount >= 3 && oCount >= 3 && moveHistory.length === 7) {
-                    const firstMove = moveHistory.shift();
-                    cells[firstMove.index].textContent = '';
-                    cells[firstMove.index].classList.remove('x', 'o');
-                    if (firstMove.symbol === 'X') xCount--;
-                    else oCount--;
-                }
+        if (checkWinner()) {
+          status.textContent = `玩家 ${currentPlayer} 勝利！`;
+          disableBoard();
+          return;
+        }
 
-                currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
-                status.textContent = `輪到: ${currentPlayer}`;
-            });
-        });
+        currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+        status.textContent = `輪到 ${currentPlayer}`;
+      });
+    });
 
-        resetButton.addEventListener('click', () => {
-            cells.forEach(cell => {
-                cell.textContent = '';
-                cell.classList.remove('x', 'o');
-            });
-            moveHistory = [];
-            xCount = 0;
-            oCount = 0;
-            currentPlayer = 'X';
-            status.textContent = `輪到: ${currentPlayer}`;
-        });
-    </script>
+    resetButton.addEventListener('click', () => {
+      board = Array(9).fill(null);
+      moveHistory = { X: [], O: [] };
+      currentPlayer = 'X';
+      status.textContent = `輪到 ${currentPlayer}`;
+      boxes.forEach(box => {
+        box.textContent = '';
+        box.disabled = false;
+      });
+    });
+
+    function checkWinner() {
+      const winConditions = [
+        [0, 1, 2], [3, 4, 5], [6, 7, 8], // 橫行
+        [0, 3, 6], [1, 4, 7], [2, 5, 8], // 直行
+        [0, 4, 8], [2, 4, 6]             // 對角線
+      ];
+
+      return winConditions.some(condition => {
+        return condition.every(index => board[index] === currentPlayer);
+      });
+    }
+
+    function disableBoard() {
+      boxes.forEach(box => box.disabled = true);
+    }
+  </script>
 </body>
 </html>
